# practise-projects

./: README.md  savedataArc.txt  untitled.py
nucaxem/Assembly/: Complex.asm
nucaxem/Batch/: New-pwnagotchi-face-editor.bat
nucaxem/C#/: Deleter.cs
nucaxem/Chef/: Hello.chef
nucaxem/Fortran/: Calc.f90  guess-number.f90  quiz.f90  rock_paper_sizzors
nucaxem/Games/: 2d_cs.py
nucaxem/Games/20-games-pygame/: asteroids.py  balloon_pop.py  breakout.py  connect_four.py  flappy_bird.py  frogger.py  main.py  maze_runner.py  memory.py  minesweeper.py  platformer.py  pong.py  racing.py  (+6 more)
nucaxem/Intercal/: Hello.i
nucaxem/LOLCODE/: Ultimate_multitool.lol  hello.lol
nucaxem/Rust/: Calc.rs  Guess-game.rs  Loopcount.rs
nucaxem/Rust/Password Manager/Dependencies/: Cargo.toml
nucaxem/SCSS/: hello.scss
nucaxem/batch/: Driver_loader.bat  forkbomb1.bat
nucaxem/c++/: BSOD.cpp  Exsample fake malewre.cpp  Maleware.cpp  Multitool.cpp  deleter.cpp  imissyou.cpp  littlesong.cpp  malewaretwo.cpp
nucaxem/duckyscript/: demo1.txt  open_camera.txt
nucaxem/first test/: index.html
nucaxem/html/: Webshell.html  blood_effect.html  blood_effects2.html  device_information.html  fallingblocks.html  iOS Test.html  loadstring_creator.html  nucaxem-tools.html  tf2_loadout_maker.html  translator.html  website_to_loadstring.html  word_counter.html
nucaxem/python3/: .3ds to .click renamer .py  Windows_Security_Tool.py  calc.py  everythingsgonnabealright.py  i-miss-you-maleware.py  idk.py  mouselocker.py  mp3_Player.py  snake-game-with-bsod.py
nucaxem/scratch/: Untitled-2.sb3
(+42 files in other folders)
