[package]
name = "modern_passman"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.23"
egui = "0.23"
aes = "0.8"
block-modes = "0.9"
block-padding = "0.3"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
base64 = "0.21"
clipboard = "0.7"
